<?xml version="1.0"?>
<package>
  <name>pr_behavior_tree</name>
  <version>0.1.0</version>
  <description>
    A simple python behavior tree based around coroutines
  </description>
  <maintainer email="mklingen@andrew.cmu.edu">Matt Klingensmith</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python</build_depend>
  <run_depend>python</run_depend>
  <run_depend>python-catkin-pkg</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>python-scipy</run_depend>
</package>
